--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "description": "Node-ws-remove-control",
   "type": "module",
-  "main": "build/server.js",
+  "main": "js-file/server.js",
   "scripts": {
-    "start:front": "node ./index.js",
+    "start": "node ./index.js && tsc -p tsconfig.json && node js-file/server.js",
     "start:dev": "tsc -p tsconfig.json && nodemon js-file/server.js",
-    "start:prod": "tsc -p tsconfig.json && node js-file/server.js",
+    "start:Front": "node ./index.js",
     "lint": "eslint --ext .js,.ts --fix ts-file/",
     "build": "tsc -p tsconfig.json",
     "fix-ts": "eslint --fix 'project-with-typescript/*.ts'"
