--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "type": "module",
   "main": "js-file/server.js",
   "scripts": {
-    "start": "node ./index.js && tsc -p tsconfig.json && node js-file/server.js",
+    "start": "tsc -p tsconfig.json && node js-file/server.js",
     "start:dev": "tsc -p tsconfig.json && nodemon js-file/server.js",
-    "start:Front": "node ./index.js",
+    "start:front": "node ./index.js",
     "lint": "eslint --ext .js,.ts --fix ts-file/",
     "build": "tsc -p tsconfig.json",
     "fix-ts": "eslint --fix 'project-with-typescript/*.ts'"
